samples/_failures_safe/1761403538_0d4eba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6684a6e.c: In function ‘main’:
./samples/SAFE/__tmp_e6684a6e.c:191:18: error: ‘STATE’ undeclared (first use in this function); did you mean ‘STATE_E’?
  191 |             case STATE
      |                  ^~~~~
      |                  STATE_E
./samples/SAFE/__tmp_e6684a6e.c:191:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e6684a6e.c:191:13: error: expected ‘:’ or ‘...’ at end of input
  191 |             case STATE
      |             ^~~~
./samples/SAFE/__tmp_e6684a6e.c:191:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e6684a6e.c:191:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e6684a6e.c:191:13: error: expected declaration or statement at end of input
